// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`src/lib/logger debug should not show log by default 1`] = `
"2012-12-26 07:40:00.025 test string
"
`;

exports[`src/lib/logger debug should show log if showDebug = true 1`] = `
[
  [
    "<gray>2012-12-26 07:40:00.025</gray> test string",
  ],
]
`;

exports[`src/lib/logger debug should show log if showDebug = true 2`] = `
"2012-12-26 07:40:00.025 test string
"
`;

exports[`src/lib/logger debug should skip timestamp and show log if showDebug = true and showTime = false 1`] = `
[
  [
    "test string",
  ],
]
`;

exports[`src/lib/logger debug should skip timestamp and show log if showDebug = true and showTime = false 2`] = `
"test string
"
`;

exports[`src/lib/logger error should apply red bright color to console 1`] = `
[
  [
    "<gray>2012-12-26 07:40:00.025</gray> <red>test1 /^\\d+$/ {
	"b": 2
}</red>
    at test.js:1:1
    at index.js:1:1",
  ],
]
`;

exports[`src/lib/logger error should apply red bright color to console 2`] = `
"2012-12-26 07:40:00.025 test1 /^\\d+$/ {
	"b": 2
}
    at test.js:1:1
    at index.js:1:1
"
`;

exports[`src/lib/logger error should apply red bright color to console and skip timestamp if showTime = false 1`] = `
[
  [
    "<red>test1 /^\\d+$/ {
	"b": 2
}</red>
    at test.js:1:1
    at index.js:1:1",
  ],
]
`;

exports[`src/lib/logger error should apply red bright color to console and skip timestamp if showTime = false 2`] = `
"test1 /^\\d+$/ {
	"b": 2
}
    at test.js:1:1
    at index.js:1:1
"
`;

exports[`src/lib/logger error should log error with stack 1`] = `
[
  [
    "<gray>2012-12-26 07:40:00.025</gray> <red>test exception</red>
    at error.js:1:1",
  ],
]
`;

exports[`src/lib/logger error should log error with stack 2`] = `
"2012-12-26 07:40:00.025 test exception
    at error.js:1:1
"
`;

exports[`src/lib/logger error should log error without stack 1`] = `
[
  [
    "<gray>2012-12-26 07:40:00.025</gray> <red>test exception</red>",
  ],
]
`;

exports[`src/lib/logger error should log error without stack 2`] = `
"2012-12-26 07:40:00.025 test exception
"
`;

exports[`src/lib/logger info should apply green bright color to console 1`] = `
[
  [
    "<gray>2012-12-26 07:40:00.025</gray> <green>test1 /^\\d+$/ {
	"b": 2
}</green>",
  ],
]
`;

exports[`src/lib/logger info should apply green bright color to console 2`] = `
"2012-12-26 07:40:00.025 test1 /^\\d+$/ {
	"b": 2
}
"
`;

exports[`src/lib/logger info should apply green bright color to console and skip timestamp if showTime = false 1`] = `
[
  [
    "<green>test1 /^\\d+$/ {
	"b": 2
}</green>",
  ],
]
`;

exports[`src/lib/logger info should apply green bright color to console and skip timestamp if showTime = false 2`] = `
"test1 /^\\d+$/ {
	"b": 2
}
"
`;

exports[`src/lib/logger log should log object 1`] = `
[
  [
    "<gray>2012-12-26 07:40:00.025</gray> {
	"a": 1,
	"second key": {
		"date": "26.12.2012, 07:40:00"
	}
}",
  ],
]
`;

exports[`src/lib/logger log should log object 2`] = `
"2012-12-26 07:40:00.025 {
	"a": 1,
	"second key": {
		"date": "26.12.2012, 07:40:00"
	}
}
"
`;

exports[`src/lib/logger log should log string 1`] = `
[
  [
    "<gray>2012-12-26 07:40:00.025</gray> test string",
  ],
]
`;

exports[`src/lib/logger log should log string 2`] = `
"2012-12-26 07:40:00.025 test string
"
`;

exports[`src/lib/logger log should log string, regex and object 1`] = `
[
  [
    "<gray>2012-12-26 07:40:00.025</gray> test1 /^\\d+$/ {
	"b": 2
}",
  ],
]
`;

exports[`src/lib/logger log should log string, regex and object 2`] = `
"2012-12-26 07:40:00.025 test1 /^\\d+$/ {
	"b": 2
}
"
`;

exports[`src/lib/logger log should log two strings 1`] = `
[
  [
    "<gray>2012-12-26 07:40:00.025</gray> test1 test2",
  ],
]
`;

exports[`src/lib/logger log should log two strings 2`] = `
"2012-12-26 07:40:00.025 test1 test2
"
`;

exports[`src/lib/logger log should skip timestamp with showTime = false 1`] = `
[
  [
    "test string",
  ],
]
`;

exports[`src/lib/logger log should skip timestamp with showTime = false 2`] = `
"test string
"
`;

exports[`src/lib/logger trace should append stack and hide timestamp and show log if showDebug = true and showTime = false 1`] = `
[
  [
    "test string
    at test.js:1:1
    at index.js:1:1",
  ],
]
`;

exports[`src/lib/logger trace should append stack and hide timestamp and show log if showDebug = true and showTime = false 2`] = `
"test string
    at test.js:1:1
    at index.js:1:1
"
`;

exports[`src/lib/logger trace should append stack and not show log if showDebug = false 1`] = `
"2012-12-26 07:40:00.025 test string
    at test.js:1:1
    at index.js:1:1
"
`;

exports[`src/lib/logger trace should append stack and show log if showDebug = true 1`] = `
[
  [
    "<gray>2012-12-26 07:40:00.025</gray> test string
    at test.js:1:1
    at index.js:1:1",
  ],
]
`;

exports[`src/lib/logger trace should append stack and show log if showDebug = true 2`] = `
"2012-12-26 07:40:00.025 test string
    at test.js:1:1
    at index.js:1:1
"
`;

exports[`src/lib/logger warn should apply yellow bright color to console 1`] = `
[
  [
    "<gray>2012-12-26 07:40:00.025</gray> <yellow>test1 /^\\d+$/ {
	"b": 2
}</yellow>",
  ],
]
`;

exports[`src/lib/logger warn should apply yellow bright color to console 2`] = `
"2012-12-26 07:40:00.025 test1 /^\\d+$/ {
	"b": 2
}
"
`;

exports[`src/lib/logger warn should apply yellow bright color to console and skip timestamp if showTime = false 1`] = `
[
  [
    "<yellow>test1 /^\\d+$/ {
	"b": 2
}</yellow>",
  ],
]
`;

exports[`src/lib/logger warn should apply yellow bright color to console and skip timestamp if showTime = false 2`] = `
"test1 /^\\d+$/ {
	"b": 2
}
"
`;
